[package]
name = "esqlz"
version = "1.1.0"
edition = "2021"
authors = ["Harshil Jani <harshiljani2002@gmail.com>"]
license = "MIT"
description = "TUI to manage sequelize migrations easily"
readme = "README.md"
repository = "https://github.com/Harshil-Jani/esqlz"
keywords = ["migration", "sequelize-cli", "tui", "javascript"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.17", features = ["derive"] }
inquire = "0.7.5"
